Making this shit work on Safari, changing the stop icon to something Safari can render

--- a/src/stylesheets/styles.styl
+++ b/src/stylesheets/styles.styl
@@ -271,6 +271,11 @@ rotationAnimation()
     +mobilePhoneAndSmallerMediaQuery()
         animation unset
 
++mobilePhoneAndSmallerMediaQuery()
+    #stopAll
+        .icon:after
+            content "≠"
+
 #toggleRecord
     .icon:after
         content "⊚"
